# MAGMA

./: .hgtags  BugsToFix.txt  CMakeLists.txt  CPackConfig_MAGMA.cmake  CPackConfig_MAGMA_full.cmake  CPackConfig_MORSE_full.cmake  CPackConfig_MORSE_light.cmake  Make.distr  Makefile  Makefile.gen  Makefile.internal  Makefile.subdir  README  README-Windows  Readme.gpus  Release-ToDo-1.1.txt  Release-ToDo.txt  ReleaseChecklist  ReleaseNotes  TODO.list  make.check-acml  make.icl  make.inc  make.inc.accelerate  make.inc.acml  make.inc.atlas  make.inc.bulge  make.inc.cumin  make.inc.disco  make.inc.goto  make.inc.ig  make.inc.ig.pgi  make.inc.int64  make.inc.macos  make.inc.mkl  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.mkl-ilp64  (+7 more)
include/: CMakeLists.txt  Makefile  Makefile.src  auxiliary.h  magma.h  magma_auxiliary.h  magma_batched.h  magma_bulge.h  magma_copy.h  magma_copy_v1.h  magma_lapack.h  magma_mangling.h  magma_operators.h  magma_types.h  magma_v2.h  magma_vbatched.h  magma_z.h  magma_zbatched.h  magma_zbulge.h  magma_zbulgeinc.h  magma_zc.h  magma_zgehrd_m.h  magma_zlapack.h  magma_zvbatched.h  magmablas.h  magmablas_q.h  magmablas_v1.h  magmablas_v1_map.h  magmablas_v2.h  magmablas_z.h  magmablas_z_q.h  magmablas_z_v1.h  magmablas_z_v1_map.h  magmablas_z_v2.h  magmablas_zc.h  magmablas_zc_q.h  magmablas_zc_v1.h  magmablas_zc_v1_map.h  magmablas_zc_v2.h  operators.h
magmablas/: CMakeLists.txt  Makefile  Makefile.src  atomics.cuh  cgemm_batched_core.cu  cgemm_fermi_kernels.h  cgemm_fermi_kernels_batched.h  cgemm_fermi_kernels_batched_k32.h  cgemm_vbatched_core.cu  cgemv_batched_core.cu  cgemv_fermi.cu  cgemv_tesla.cu  cgemv_vbatched_core.cu  chemv_fermi.cu  chemv_tesla.cu  cherk.cu  cherk_batched_core.cu  cherk_vbatched_core.cu  cinplace_transpose.cu  clag2z.cu  clat2z.cu  commonblas.h  commonblas_z.h  cpermute.cu  csymv_fermi.cu  csymv_tesla.cu  csyrk.cu  ctranspose.cu  ctrmm.cu  ctrsm.cu  dauxiliary.cu  dgemm_batched_core.cu  dgemm_fermi.cu  dgemm_fermi_kernels.h  dgemm_fermi_kernels_batched.h  dgemm_fermi_kernels_batched_k32.h  dgemm_fermi_notex.cu  dgemm_kernel_N_N_64_16_16_16_4.cu  dgemm_kernel_N_N_64_16_16_16_4_special.cu  dgemm_kernel_N_T_64_16_4_16_4.cu  (+317 more)
magmablas/gemm_config/: cgemm_param_nn.h  cgemm_param_nt.h  cgemm_param_tt.h  dgemm_param_nt.h  dgemm_param_tn.h  dgemm_param_tt.h  sgemm_param_nn.h  sgemm_param_nt.h  sgemm_param_tn.h  sgemm_param_tt.h  zgemm_param_nn.h  zgemm_param_nt.h  zgemm_param_tn.h  zgemm_param_tt.h
magmablas/gemv_config/: gemvn_param.h
magmablas/obsolete/: dgemm_fermi.cu  dgemm_fermi_notex.cu  dgemm_tesla_N_N.cu  dgemm_tesla_N_T.cu  dgemm_tesla_T_N.cu  dgemm_tesla_T_T.cu  gemv32_tesla.cu  sgemm_fermi.cu  sgemm_fermi64.cu  sgemm_fermi80.cu  sgemv_tesla.cu  ssyr2k.cu  zhemm_1gpu.cpp  zhemm_1gpu_old.cpp  zhemv_tesla.cu  zsymv_tesla.cu
multi-gpu-dynamic/: CMakeLists.txt  Makefile.gen  Makefile.internal  make.inc.example
multi-gpu-dynamic-deprecated/common/: CMakeLists.txt  Makefile  async.h  control.c  descriptor.h  workspace.c  workspace_z.c
multi-gpu-dynamic/common/: Makefile  async.c  async.h  codelet_z.h  common.h  compute_z.h  context.c  context.h  control.c  descriptor.c  descriptor.h
multi-gpu-dynamic/compute/: CMakeLists.txt  Makefile  pzgemm.c  pzgeqrf.c  pzgetrf.c  pzgetrf_incpiv.c  pzplghe.c  pzplgsy.c  pzplrnt.c  pzpotrf.c  pztile.c  pztrsm.c  pztrsmpl.c  pztrtri.c  zgemm.c  zgeqrf.c  zgesv.c  zgesv_incpiv.c  zgetrf.c  zgetrf_incpiv.c  zgetrs.c  zgetrs_incpiv.c  zplghe.c  zplgsy.c  zplrnt.c  zposv.c  zpotrf.c  zpotrs.c  ztile.c  ztrsm.c  ztrsmpl.c  ztrtri.c  ztrtri_extra.c
multi-gpu-dynamic/include/: CMakeLists.txt  magma_morse.h  magma_morse_z.h  morse.h  morse_z.h
multi-gpu-dynamic/morse/: CMakeLists.txt
multi-gpu-dynamic/timing/: CMakeLists.txt  Makefile  auxiliary.c  auxiliary.h  time_zgemm_tile.c  time_zgeqrf.c  time_zgeqrf_tile.c  time_zgetrf_incpiv.c  time_zgetrf_tile.c  time_zposv.c  time_zposv_tile.c  time_zpotrf.c  time_zpotrf_tile.c  time_zpotri.c  time_zpotri_tile.c  timing.c  timing.h  zauxiliary.c  zauxiliary.h
multi-gpu-dynamic/tools/: codegen.py  subs.py
quark/: CMakeLists.txt  LICENSE  Makefile  bsd_queue.h  bsd_tree.h  eztrace_convert_quark.c  icl_hash.c  icl_hash.h  icl_list.c  icl_list.h  quark.c  quark.h  quark_trace.h  quark_unpack_args.h  quarkos-hwloc.c  quarkos.c  quarkwinthread.c  quarkwinthread.h
quark/include/: bsd_queue.h  event_trace.h  icl_hash.h  icl_list.h  quark.h  quark_unpack_args.h
src/: CMakeLists.txt  Makefile  Makefile.src  auxiliary.cpp  cblas_z.cpp  cgeqrf.cpp  cgeqrf_gpu.cpp  cgetrf.cpp  cgetrf_gpu.cpp  clarfb.cpp  core_zhbtype1cb.cpp  core_zhbtype2cb.cpp  core_zhbtype3cb.cpp  core_zlarfy.cpp  cpotrf.cpp  cpotrf_gpu.cpp  dbulge_aux.cpp  dgeev.cpp  dgeev_m.cpp  dgehrd.cpp  dgelqf-v2.cpp  dgelqf.cpp  dgemm_gpu.cpp  dgeqlf.cpp  dgeqp3.cpp  dgeqrf.cpp  dgeqrf_gpu-v2.cpp  dgeqrf_gpu.cpp  dgeqrs_gpu.cpp  dgesdd.cpp  dgesvd.cpp  dgetrf.cpp  dgetrf_gpu.cpp  dgetrs_gpu.cpp  dlaed2.f  dlaex0.cpp  dlaex0_m.cpp  dlaex1.cpp  dlaex1_m.cpp  dlaex3.cpp  (+345 more)
src/obsolete/: zbulge_back_August2014.cpp  zgeqrf4_gpu.cpp  zgetrf-v2.cpp  zgetrf-v3.cpp  zgetrf1_mgpu.cpp  zgetrf2_gpu.cpp  zgetrf2_ooc.cpp  zgetrf_ooc.cpp  zhetrd_bhe2trc.cpp  zhetrd_bhe2trc_v3.cpp  zhetrd_bhe2trc_v5.cpp  zhetrd_he2hb_mgpu_spec.cpp  (+7 more)
testing/: CMakeLists.txt  Makefile  Makefile.src  compile  flops.h  fortran2.cpp  get_nb.cpp  getrf_f.f  magma_matrix.hpp  magma_module_f77.f  magma_module_f77.f90  magma_util.cpp  magma_zf77.f90  magma_zgenerate.cpp  magma_zgesvd_check.cpp  magma_zutil.cpp  results_cgeqrf.txt  results_dgehrd.txt  results_dgelqf.txt  results_dgeqlf.txt  results_dgeqrf.txt  results_dgeqrs.txt  results_dgesv.txt  results_dgetrf.txt  results_dpotrf.txt  results_dsgeqrsv_gpu.txt  results_dsgesv_gpu.txt  results_dsposv_gpu.txt  results_fermi.txt  results_sgehrd.txt  results_sgelqf.txt  results_sgeqlf.txt  results_sgeqrf.txt  results_sgeqrs.txt  results_sgesv.txt  results_sgetrf.txt  results_spotrf.txt  results_zgeqrf.txt  results_zpotrf.txt  run_summarize.py  (+239 more)
(+1136 files in other folders)
